--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "axios": "^1.7.7",
     "react": "18.2.0",
     "react-native": "0.74.4",
+    "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "^4.10.8",
-    "react-native-screens": "^3.34.0"
+    "react-native-screens": "^3.34.0",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -26,6 +31,7 @@
     "@react-native/metro-config": "0.74.86",
     "@react-native/typescript-config": "0.74.86",
     "@types/react": "^18.2.6",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
