--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "axios": "^1.7.7",
     "react": "18.2.0",
     "react-native": "0.74.4",
+    "react-native-keychain": "^8.2.0",
     "react-native-safe-area-context": "^4.10.8",
-    "react-native-screens": "^3.34.0"
+    "react-native-screens": "^3.34.0",
+    "sweetalert2": "^11.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
