--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "axios": "^1.7.7",
     "react": "18.2.0",
     "react-native": "0.74.4",
+    "react-native-paper": "^4.7.2",
     "react-native-progress": "^5.0.1",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.34.0",
@@ -29,6 +31,7 @@
     "@react-native/metro-config": "0.74.86",
     "@react-native/typescript-config": "0.74.86",
     "@types/react": "^18.2.6",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
